Complete markdown skeleton with assignment prompts

--- a/d604_task_2.ipynb
+++ b/d604_task_2.ipynb
@@ -4,7 +4,10 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "toc_visible": true
+      "toc_visible": true,
+      "mount_file_id": "1i7I5u-GuRHNUH_f65Z3zV9QwJsri6VqR",
+      "authorship_tag": "ABX9TyNGTOviRerutAiML0G3mW2o",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -15,6 +18,16 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/smmurdock/Neural-Network-Sentiment-Analysis/blob/main/d604_task_2.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "markdown",
       "source": [
@@ -77,10 +90,31 @@
     {
       "cell_type": "markdown",
       "source": [
+        "> Summarize one research question that you will answer using a neural network model and NLP techniques. Be sure the research question is relevant to a real-world organizational situation and sentiment analysis captured in your chosen dataset or datasets.\n",
+        "\n",
+        "\n",
+        "  Note: If you choose to use more than one dataset, you must concatenate them into one dataset for parts II and III."
+      ],
+      "metadata": {
+        "id": "KkehER61YRzV"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "### A2. Objectives or Goals"
       ],
       "metadata": {
         "id": "suidsROMXFZj"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "> Define the objectives or goals of the data analysis. Be sure each objective or goal is reasonable within the scope of the research question and is represented in the available data."
+      ],
+      "metadata": {
+        "id": "oI94y0muYVGi"
       }
     },
     {
@@ -95,10 +129,28 @@
     {
       "cell_type": "markdown",
       "source": [
+        "> Identify an industry-relevant type of neural network capable of performing a text classification task that can be trained to produce useful predictions on text sequences on the selected dataset."
+      ],
+      "metadata": {
+        "id": "6G2EyKjQYWkJ"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "## B. Data Preparation"
       ],
       "metadata": {
         "id": "69M-msJNXJng"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "> Summarize the data cleaning process by doing the following:"
+      ],
+      "metadata": {
+        "id": "JB6PS55jYYJV"
       }
     },
     {
@@ -113,10 +165,33 @@
     {
       "cell_type": "markdown",
       "source": [
+        "> Perform exploratory data analysis on the chosen dataset, and include an explanation of each of the following elements:\n",
+        "\n",
+        "  * presence of unusual characters (e.g., emojis, non-English characters)\n",
+        "  * vocabulary size\n",
+        "  * word embedding length\n",
+        "  * statistical justification for the chosen maximum sequence length"
+      ],
+      "metadata": {
+        "id": "UnAYjwVIYbC1"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "### B2. Tokenization"
       ],
       "metadata": {
         "id": "8Zu1S8rkXNFB"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "> Describe the goals of the tokenization process, including any code generated and any packages that are used to normalize text during the process."
+      ],
+      "metadata": {
+        "id": "yoaRyAZNYoLd"
       }
     },
     {
@@ -131,10 +206,31 @@
     {
       "cell_type": "markdown",
       "source": [
+        "> Explain the padding process used to standardize the length of sequences. Include the following in your explanation:\n",
+        "\n",
+        "  * whether the padding occurs before or after the text sequence\n",
+        "  * a screenshot of a single padded sequence"
+      ],
+      "metadata": {
+        "id": "RgNh94hWYpvI"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "### B4. Categories of Sentiment"
       ],
       "metadata": {
         "id": "wFi0_nqiXQ8f"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "> Identify how many categories of sentiment will be used and provide an activation function for the final dense layer of the network."
+      ],
+      "metadata": {
+        "id": "L31XhnvPYvBP"
       }
     },
     {
@@ -149,10 +245,28 @@
     {
       "cell_type": "markdown",
       "source": [
+        "> Explain the steps used to prepare the data for analysis, including the size of the training, validation, and test set split based on the industry average."
+      ],
+      "metadata": {
+        "id": "TFOdKOeLYwwW"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "### B6. Prepared Dataset"
       ],
       "metadata": {
         "id": "SmfnTDfjXVWW"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "> Provide a copy of the prepared dataset."
+      ],
+      "metadata": {
+        "id": "wF5vypKCYyZX"
       }
     },
     {
@@ -167,10 +281,28 @@
     {
       "cell_type": "markdown",
       "source": [
+        "> Describe the type of neural network model used by doing the following:"
+      ],
+      "metadata": {
+        "id": "MvSCOej3Y33a"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "### C1. Model Summary"
       ],
       "metadata": {
         "id": "4auiTuqPXZCx"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "> Provide the output of the model summary of the function from TensorFlow or PyTorch."
+      ],
+      "metadata": {
+        "id": "PlS2ulu_Y5cc"
       }
     },
     {
@@ -185,10 +317,34 @@
     {
       "cell_type": "markdown",
       "source": [
+        "> Discuss the number of layers, the type of layers, and the total number of parameters."
+      ],
+      "metadata": {
+        "id": "3wXVZoIsY6_Z"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "### C3. Hyperparameters"
       ],
       "metadata": {
         "id": "pGqvqMw9XcKd"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "> Justify the choice of hyperparameters, including each of the following elements:\n",
+        "\n",
+        "  * activation functions\n",
+        "  * number of nodes per layer\n",
+        "  * loss function\n",
+        "  * optimizer\n",
+        "  * stopping criteria"
+      ],
+      "metadata": {
+        "id": "zkvfN8ekY8fZ"
       }
     },
     {
@@ -203,10 +359,28 @@
     {
       "cell_type": "markdown",
       "source": [
+        "> Evaluate the model's training process and its relevant outcomes by doing the following:"
+      ],
+      "metadata": {
+        "id": "qYDNjoOwZFuM"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "### D1. Stopping Criteria"
       ],
       "metadata": {
         "id": "GvncPTQ1Xf2m"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "> Discuss the impact of using stopping criteria to include defining the number of epochs, including a screenshot showing the final training epoch."
+      ],
+      "metadata": {
+        "id": "CA4060YpZHIi"
       }
     },
     {
@@ -221,10 +395,28 @@
     {
       "cell_type": "markdown",
       "source": [
+        "> Assess the fitness of the model and any actions taken to address overfitting or underfitting."
+      ],
+      "metadata": {
+        "id": "T0llPTCPZIgm"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "### D3. Training Process"
       ],
       "metadata": {
         "id": "GFfPUSzyXi-v"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "> Provide clearly labeled visualizations of the model's training process and show the loss and accuracy metric."
+      ],
+      "metadata": {
+        "id": "eCGOiV3NZJws"
       }
     },
     {
@@ -239,10 +431,28 @@
     {
       "cell_type": "markdown",
       "source": [
+        "> Discuss the predictive accuracy of the trained model using the chosen evaluation metric from part D3."
+      ],
+      "metadata": {
+        "id": "RBWgs7RnZLqq"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "### D5. Ethical Standards Compliance"
       ],
       "metadata": {
         "id": "VQpGd1E-Xmus"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "> Explain how the analysis complies with artificial intelligence (AI) global ethical standards and mitigates bias."
+      ],
+      "metadata": {
+        "id": "qOObi3qeZM_8"
       }
     },
     {
@@ -257,10 +467,28 @@
     {
       "cell_type": "markdown",
       "source": [
+        "> Provide the code you used to save the trained model within the neural network."
+      ],
+      "metadata": {
+        "id": "NsIupuSXZOW-"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "## F. Functionality"
       ],
       "metadata": {
         "id": "Tp1BhWM3Xrwq"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "> Discuss the functionality of your model, including the impact of your choice of network architecture."
+      ],
+      "metadata": {
+        "id": "hcv8uZc0ZQCF"
       }
     },
     {
@@ -275,10 +503,28 @@
     {
       "cell_type": "markdown",
       "source": [
+        "> Recommend a course of action based on your results as they relate to the research question."
+      ],
+      "metadata": {
+        "id": "oushAu1oZRco"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "## H. Reporting"
       ],
       "metadata": {
         "id": "w1NyxmdpXvKP"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "> Submit a copy of your code and output in a PDF or HTML format."
+      ],
+      "metadata": {
+        "id": "uBk3dAORZTDk"
       }
     },
     {
@@ -304,6 +550,15 @@
     {
       "cell_type": "markdown",
       "source": [
+        "> Submit a list of all the specific web sources you used to acquire segments of third-party code to support the application."
+      ],
+      "metadata": {
+        "id": "4s_Gv5wQZUVt"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "## J. Sources"
       ],
       "metadata": {
@@ -312,10 +567,21 @@
     },
     {
       "cell_type": "markdown",
-      "source": [],
+      "source": [
+        "> Acknowledge sources, using in-text citations and references, for content that is quoted, paraphrased, or summarized."
+      ],
       "metadata": {
         "id": "1yVmJSpbX6_K"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "tISvHa3CZWOo"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
