Define the objectives of the analysis

--- a/d604_task_2.ipynb
+++ b/d604_task_2.ipynb
@@ -4,9 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "toc_visible": true,
       "mount_file_id": "1i7I5u-GuRHNUH_f65Z3zV9QwJsri6VqR",
-      "authorship_tag": "ABX9TyNGTOviRerutAiML0G3mW2o",
+      "authorship_tag": "ABX9TyMTdbqWxTrX2lFJsHlHCcK8",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -39,7 +38,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -102,6 +101,17 @@
     {
       "cell_type": "markdown",
       "source": [
+        "**Research Question:** Can a neural network be trained to accurately classify sentiment in customer product reviews from Amazon as either positive or negative?\n",
+        "\n",
+        "This question is directly relevant to a real-world organizational situation. For a company like Amazon or any third-party seller on its platform, manually sifting through thousands of customer reviews to gauge public opinion is impractical based on the sheer volume of Amazon's product catalog. A system that can accurately classify sentiment allows an organization to quickly monitor customer feedback at scale. This enables them to identify popular product features, detect widespread product defects, determine if a product is likely to be returned, and track shifts in customer satisfaction over time, leading to faster product improvements and better customer service."
+      ],
+      "metadata": {
+        "id": "DYV5t1bIiYSs"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "### A2. Objectives or Goals"
       ],
       "metadata": {
@@ -115,6 +125,21 @@
       ],
       "metadata": {
         "id": "oI94y0muYVGi"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "The primary goals of this data analysis are to design, build, and evaluate a neural network for sentiment classification. The specific objectives are as follows:\n",
+        "\n",
+        "* **Data Preprocessing:** To clean and prepare the raw text data from the Amazon reviews dataset for modeling.\n",
+        "\n",
+        "* **Model Development:** To build and train a suitable neural network. This analysis will use an LSTM-based architecture, which is effective for learning from sequential data like text. The goal is to train the model to recognize patterns and contextual cues in word usage that indicate positive or negative sentiment.\n",
+        "\n",
+        "* **Model Evaluation:** To assess the performance of the trained model on an unseen test dataset. The objective is to quantify its predictive accuracy using key classification metrics. This evaluation will directly answer how effectively the model can classify new, unseen review data."
+      ],
+      "metadata": {
+        "id": "lGIsFmmzfopp"
       }
     },
     {
@@ -530,13 +555,27 @@
     {
       "cell_type": "code",
       "source": [
-        "# Convert notebook to HTML\n"
+        "# Convert notebook to HTML\n",
+        "!jupyter nbconvert --to html d604_task_2.ipynb"
       ],
       "metadata": {
-        "id": "PqtYBIGnW_Wi"
+        "id": "PqtYBIGnW_Wi",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "b206b596-cfb8-4208-8502-652d5761ffeb"
       },
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[NbConvertApp] Converting notebook d604_task_2.ipynb to html\n",
+            "[NbConvertApp] Writing 303620 bytes to d604_task_2.html\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
