Discuss the neural network model chosen for sentiment analysis

--- a/d604_task_2.ipynb
+++ b/d604_task_2.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1i7I5u-GuRHNUH_f65Z3zV9QwJsri6VqR",
-      "authorship_tag": "ABX9TyMTdbqWxTrX2lFJsHlHCcK8",
+      "authorship_tag": "ABX9TyNCFCIowcA8rZ2vLjlAtWEj",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -158,6 +158,17 @@
       ],
       "metadata": {
         "id": "6G2EyKjQYWkJ"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "An appropriate and industry-relevant neural network for this text sentiment classification tasks is the **Long Short-Term Memory (LSTM)** neural network.\n",
+        "\n",
+        "LSTMs are a type of Recurrent Neural Network (RNN) specifically designed to handle and learn from sequential data like text, where the order of text matters. Unlock standard networks, LSTMs have internal memory cells that can maintain information over long sequences. This capability is crucial for natural language processing because the meaning of a word often depends on its context. An LSTM can capture these dependencies, allowing it to understand nuances in language that are critical for accurately determining sentiment. This makes LSTMs a powerful and widely used tool for sentiment analysis in real-world applications."
+      ],
+      "metadata": {
+        "id": "E_zLGej_g9JZ"
       }
     },
     {
