Add custom function to analyze for unusual characters

--- a/d604_task_2.ipynb
+++ b/d604_task_2.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1i7I5u-GuRHNUH_f65Z3zV9QwJsri6VqR",
-      "authorship_tag": "ABX9TyMQ07pcYyY0/yJQpOSGfe11",
+      "authorship_tag": "ABX9TyORDZlEzRlKRZlODI0lySef",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1335,6 +1335,144 @@
     {
       "cell_type": "markdown",
       "source": [
+        "**Analyze Unusual Characters Before Cleaning**\n",
+        "\n",
+        "Working definition of unusual characters: Any emojis, non-English characters, non-Unicode characters, punctuation, or control characters"
+      ],
+      "metadata": {
+        "id": "TMHs2rV0ErYy"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Load additional libraries\n",
+        "import re\n",
+        "import unicodedata\n",
+        "import string\n",
+        "from collections import Counter"
+      ],
+      "metadata": {
+        "id": "Honqpt5mFBr2"
+      },
+      "execution_count": 84,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Create custom function to check for emojis, non-ASCII, punctuation, and numbers\n",
+        "def analyze_characters(text_series):\n",
+        "    \"\"\"\n",
+        "    Analyze and categorize unusual characters using Unicode categories.\n",
+        "\n",
+        "    References:\n",
+        "    - Python unicodedata module: https://docs.python.org/3/library/unicodedata.html\n",
+        "    - Unicode categories: https://www.unicode.org/reports/tr44/#General_Category_Values\n",
+        "    - Python string module: https://docs.python.org/3/library/string.html\n",
+        "    \"\"\"\n",
+        "\n",
+        "    all_text = ' '.join(text_series.astype(str))\n",
+        "\n",
+        "    emojis = []\n",
+        "    non_ascii = []\n",
+        "    punctuation = []\n",
+        "    numbers = []\n",
+        "\n",
+        "    for char in all_text:\n",
+        "        # Get Unicode category\n",
+        "        category = unicodedata.category(char)\n",
+        "\n",
+        "        # Emojis (Symbols category)\n",
+        "        if category.startswith('So'):  # 'So' = Symbol, other\n",
+        "            emojis.append(char)\n",
+        "\n",
+        "        # Non-ASCII (anything with code point > 127)\n",
+        "        elif ord(char) > 127:\n",
+        "            non_ascii.append(char)\n",
+        "\n",
+        "        # Punctuation (using string.punctuation)\n",
+        "        elif char in string.punctuation:\n",
+        "            punctuation.append(char)\n",
+        "\n",
+        "        # Numbers\n",
+        "        elif char.isdigit():\n",
+        "            numbers.append(char)\n",
+        "\n",
+        "    return {\n",
+        "        'emojis': Counter(emojis),\n",
+        "        'non_ascii': Counter(non_ascii),\n",
+        "        'punctuation': Counter(punctuation),\n",
+        "        'numbers': Counter(numbers)\n",
+        "    }"
+      ],
+      "metadata": {
+        "id": "FOvXJsISFbS4"
+      },
+      "execution_count": 85,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "char_analysis = analyze_characters(df_clean['review'])\n",
+        "char_analysis"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "toAvEUUFOXhm",
+        "outputId": "3c2f5578-ed92-4a0f-a0a4-1865cc7e103f"
+      },
+      "execution_count": 86,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{'emojis': Counter(),\n",
+              " 'non_ascii': Counter(),\n",
+              " 'punctuation': Counter({'.': 1070,\n",
+              "          ',': 292,\n",
+              "          '!': 164,\n",
+              "          '+': 1,\n",
+              "          '\"': 19,\n",
+              "          \"'\": 179,\n",
+              "          '/': 8,\n",
+              "          '?': 7,\n",
+              "          '-': 74,\n",
+              "          ':': 4,\n",
+              "          ')': 29,\n",
+              "          '(': 26,\n",
+              "          '&': 7,\n",
+              "          '$': 9,\n",
+              "          '*': 4,\n",
+              "          ';': 9,\n",
+              "          '%': 2,\n",
+              "          '#': 2,\n",
+              "          '[': 1,\n",
+              "          ']': 1}),\n",
+              " 'numbers': Counter({'4': 10,\n",
+              "          '5': 37,\n",
+              "          '7': 10,\n",
+              "          '3': 23,\n",
+              "          '6': 5,\n",
+              "          '8': 11,\n",
+              "          '0': 43,\n",
+              "          '2': 45,\n",
+              "          '1': 33,\n",
+              "          '9': 2})}"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 86
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "#### Vocabulary size"
       ],
       "metadata": {
@@ -1759,6 +1897,17 @@
       ],
       "metadata": {
         "id": "4s_Gv5wQZUVt"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "* [Python String module](https://docs.python.org/3/library/string.html)\n",
+        "* [Python Unicodedata module](https://docs.python.org/3/library/unicodedata.html)\n",
+        "* [Unicode Character Categories](https://www.unicode.org/reports/tr44/#General_Category_Values)"
+      ],
+      "metadata": {
+        "id": "ZQJWeVv-O7ux"
       }
     },
     {
