--- a/d604_task_2.ipynb
+++ b/d604_task_2.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1i7I5u-GuRHNUH_f65Z3zV9QwJsri6VqR",
-      "authorship_tag": "ABX9TyORDZlEzRlKRZlODI0lySef",
+      "authorship_tag": "ABX9TyOPBbT4/GKfnpxBi1zPLXeI",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -165,7 +165,7 @@
       "source": [
         "An appropriate and industry-relevant neural network for this text sentiment classification tasks is the **Long Short-Term Memory (LSTM)** neural network.\n",
         "\n",
-        "LSTMs are a type of Recurrent Neural Network (RNN) specifically designed to handle and learn from sequential data like text, where the order of text matters. Unlock standard networks, LSTMs have internal memory cells that can maintain information over long sequences. This capability is crucial for natural language processing because the meaning of a word often depends on its context. An LSTM can capture these dependencies, allowing it to understand nuances in language that are critical for accurately determining sentiment. This makes LSTMs a powerful and widely used tool for sentiment analysis in real-world applications."
+        "LSTMs are a type of **Recurrent Neural Network (RNN)** specifically designed to handle and learn from sequential data like text, where the order of text matters. Unlike standard RNNs, LSTMs have internal memory cells that can maintain information over long sequences (Audevart et al., 2021, p. 272). This capability is crucial for natural language processing because the meaning of a word often depends on its context (Ahmad, 2023, p. 333). An LSTM can capture these dependencies, allowing it to understand nuances in language that are critical for accurately determining sentiment. This makes LSTMs a powerful and widely used tool for sentiment analysis in real-world applications."
       ],
       "metadata": {
         "id": "E_zLGej_g9JZ"
@@ -1931,11 +1931,21 @@
     {
       "cell_type": "markdown",
       "source": [
-        "* Bourke, D. (2025). TensorFlow for Deep Learning Bootcamp: Zero to Mastery. Zero to Mastery. https://zerotomastery.io/courses/learn-tensorflow/"
+        "* Ahmad, I., Phd (2023). 50 Algorithms Every Programmer Should Know (2nd ed.). Packt Publishing.\n",
+        "* Audevart, A., Banachewicz, K., & Massaron, L. (2021). Machine Learning Using TensorFlow Cookbook. Packt Publishing."
       ],
       "metadata": {
         "id": "iJn9TIMdE1r-"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "oSaDgniszNmB"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
